chore: use java 8 as compiler target